# cnmsb

./: .gitignore  CONTRIBUTING.md  CONTRIBUTING.normal.md  Cargo.toml  LICENSE  QUICK_UPDATE.md  README.en.md  README.ja.md  README.md  README.normal.md  README.zh-TW.md  UPDATE.md  build-deb.sh  build-release.sh  build-rpm.sh  build.sh  cnmsb_0.1.0_amd64.deb  install-universal.sh  install.sh  test.txt  update-wsl.sh  update.sh
cloudflare-worker/: worker.js  wrangler.toml
cnmsb_0.1.0_amd64/DEBIAN/: control  postinst  prerm
debian/: changelog  cnmsb.sh  control  copyright  postinst  prerm  rules
docs/: CNAME  gpg.key  index.html  violettoolssite.html
docs/apt/: PUBLISHING.md  index.html  install.sh
docs/css/: style.css
docs/js/: main.js
docs/violettoolssite/: index.html  worker.js  wrangler.toml
docs/yum/: cnmsb-0.1.1-1.x86_64.rpm
docs/yum/repodata/: a45eef71ebb856740200a071cda344291cdb9ec5ddfa83e4b5e912e45dfe32b8-filelists.xml.zst  a938aa33801b6aca0b0391b834498c12ebecbf5532672e4ca20b4c781db72db1-other.xml.zst  cb8145a7c1b8e9bb1bf239aeb4ef08216af699adfd1c72607b3036da0ad3e814-primary.xml.zst  repomd.xml
rpm/: build-rpm.sh  cnmsb.spec
scripts/: publish-packagecloud.sh
shell/: cnmsb.zsh
src/: engine.rs  lib.rs  main.rs  parser.rs  shell.rs
src/ai/: completer.rs  config.rs  mod.rs
src/completions/: args.rs  commands.rs  context.rs  context_analyzer.rs  context_cache.rs  files.rs  history.rs  learning.rs  mod.rs  prediction.rs  semantic.rs
src/database/: intents.yaml  mod.rs
src/database/commands/: README.md  archive.yaml  backup.yaml  cloud.yaml  cnmsb.yaml  database.yaml  devtools.yaml  docker.yaml  (+17 more)
src/editor/: buffer.rs  completion.rs  context.rs  cursor.rs  history.rs  input.rs  mod.rs  mode.rs  nlp.rs  render.rs
src/sql/: connection.rs  database.rs  engine.rs  mod.rs  shell.rs
tests/: context_analyzer_test.rs  context_test.rs  nlp_test.rs  prediction_test.rs  semantic_test.rs  sql_test.rs
(+13 files in other folders)
